--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,16 @@ where = ["."]
 include = ["aurora_x*"]
 
 [tool.black]
+[tool.black]
 line-length = 120
-target-version = ['py38', 'py39', 'py310', 'py311']
+exclude = '''
+/(
+  \.eggs
+ |build
+ |dist
+ |backups
+)/
+''']
 
 [tool.mypy]
 python_version = "3.8"
