Stop tracking constantly changing Aurora runtime files
- Remove .aurora/seeds.json, .self_learning_state.json, and runs/latest from git tracking
- These files are updated every 15 seconds by the self-learning process
- Added .aurora/seeds.json to .gitignore to prevent future tracking

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ data/corpus.jsonl
 .self_learning.pid
 .self_learning_state.json
 
+# Aurora runtime state files
+.aurora/seeds.json
+
 # Logs
 logs
 *.log
