--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
     "python.analysis.extraPaths": [
         "./tools"
     ],
-    "python.defaultInterpreterPath": "./.venv/bin/python"
+    "python.defaultInterpreterPath": "./.venv/bin/python",
+    "css.lint.unknownAtRules": "ignore",
+    "css.lint.vendorPrefix": "warning"
 }
