feat: integrate AuroraChatInterface into Chat tab
- Replaced old chat.tsx with AuroraChatInterface component
- Removed sidebar Quick Chat widget (now in main Chat tab)
- Chat tab now uses the working grandmaster-powered chat with 27 tiers
- Sidebar navigation stays clean with just menu items

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,28 +6,35 @@
     ],
     "python.defaultInterpreterPath": "./.venv/bin/python",
     "css.lint.unknownAtRules": "ignore",
-    "css.lint.vendorPrefix": "warning"
-    ,
+    "css.lint.vendorPrefix": "warning",
+    "remote.autoForwardPorts": true,
+    "remote.autoForwardPortsSource": "process",
+    "remote.forwardOnOpen": true,
     "remote.portsAttributes": {
         "5000": {
-            "label": "Aurora Backend (5000)",
+            "label": "🔷 Aurora Backend API",
             "onAutoForward": "notify",
-            "protocol": "http"
+            "protocol": "http",
+            "elevateIfNeeded": false
         },
         "5001": {
-            "label": "Aurora Bridge (5001)",
+            "label": "🌉 Aurora Bridge Service",
             "onAutoForward": "notify",
-            "protocol": "http"
+            "protocol": "http",
+            "elevateIfNeeded": false
         },
         "5002": {
-            "label": "Aurora Self-Learn (5002)",
+            "label": "🧠 Aurora Self-Learning",
             "onAutoForward": "notify",
-            "protocol": "http"
+            "protocol": "http",
+            "elevateIfNeeded": false
         },
         "5173": {
-            "label": "Aurora Frontend (Vite 5173)",
-            "onAutoForward": "openPreview",
-            "protocol": "http"
+            "label": "⚡ Aurora Frontend (Main UI)",
+            "onAutoForward": "openBrowserOnce",
+            "protocol": "http",
+            "elevateIfNeeded": false,
+            "requireLocalPort": false
         }
     }
 }
