--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,62 @@
 [pytest]
-addopts = -q
+# Aurora-X Pytest Configuration
+# Comprehensive testing with coverage reporting
+
+# Test discovery
 testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+
+# Output and reporting
+addopts = 
+    -v
+    --strict-markers
+    --tb=short
+    --cov=aurora_x
+    --cov=tools
+    --cov-report=term-missing
+    --cov-report=html:coverage_html
+    --cov-report=xml:coverage.xml
+        # Minimum coverage threshold (fail if below) - Temporarily disabled for initial setup
+    # --cov-fail-under=60
+    --maxfail=5
+    --durations=10
+
+# Markers for organizing tests
+markers =
+    unit: Unit tests (fast, isolated)
+    integration: Integration tests (slower, requires services)
+    e2e: End-to-end tests (slowest, full system)
+    slow: Slow running tests
+    bridge: Bridge service tests
+    selflearn: Self-learn server tests
+    chat: Chat server tests
+    backend: Backend API tests
+    frontend: Frontend tests
+    smoke: Quick smoke tests
+    benchmark: Performance benchmark tests
+    async: Asynchronous tests
+    database: Tests requiring database
+    api: API endpoint tests
+    security: Security-related tests
+    performance: Performance/load tests
+
+# Coverage options
+[coverage:run]
+source = aurora_x,tools
+omit = 
+    */tests/*
+    */test_*
+    */.venv/*
+    */node_modules/*
+    */migrations/*
+    */backups/*
+
+[coverage:report]
+precision = 2
+show_missing = True
+skip_covered = False
+
+[coverage:html]
+directory = coverage_html
