fix: Correct chat endpoint to port 5003 and fix response handling
- Updated frontend to use http://localhost:5003/api/chat
- Changed request field from 'prompt' to 'message'
- Fixed response field to read data.response
- Updated chat server default port to 9000
- Cleaned up completed task flags
- Added comprehensive system debug documentation
- Auto-formatted code with black and ruff

--- a/.aurora_knowledge/aurora_completed_tasks.json
+++ b/.aurora_knowledge/aurora_completed_tasks.json
@@ -151,5 +151,164 @@
       "status": "success",
       "timestamp": 1762780601.4239006
     }
+  },
+  {
+    "id": "122f97c092fa",
+    "type": "creative",
+    "flag_file": "/workspaces/Aurora-x/.aurora_knowledge/IMPLEMENT_AUTHENTICATION_AUTHORIZATION.flag",
+    "created_at": "2025-11-10T23:45:38.236190",
+    "status": "completed",
+    "data": {
+      "Next Priority": "#4 from comprehensive analysis: Authentication & Authorization"
+    },
+    "attempts": 1,
+    "started_at": "2025-11-10T23:45:38.236565",
+    "completed_at": "2025-11-10T23:45:38.246722",
+    "result": {
+      "status": "success",
+      "timestamp": 1762818338.2467177
+    }
+  },
+  {
+    "id": "2a45b06ad4a7",
+    "type": "creative",
+    "flag_file": "/workspaces/Aurora-x/.aurora_knowledge/IMPLEMENT_BACKUP_DISASTER_RECOVERY.flag",
+    "created_at": "2025-11-10T23:45:43.248910",
+    "status": "completed",
+    "data": {
+      "Next Priority": "#5 from comprehensive analysis: Backup & Disaster Recovery"
+    },
+    "attempts": 1,
+    "started_at": "2025-11-10T23:45:43.249306",
+    "completed_at": "2025-11-10T23:45:43.254985",
+    "result": {
+      "status": "success",
+      "timestamp": 1762818343.2549806
+    }
+  },
+  {
+    "id": "7c25835f170a",
+    "type": "creative",
+    "flag_file": "/workspaces/Aurora-x/.aurora_knowledge/IMPLEMENT_PERFORMANCE_OPTIMIZATION.flag",
+    "created_at": "2025-11-10T23:45:48.256427",
+    "status": "completed",
+    "data": {},
+    "attempts": 1,
+    "started_at": "2025-11-10T23:45:48.256934",
+    "completed_at": "2025-11-10T23:45:48.266152",
+    "result": {
+      "status": "success",
+      "timestamp": 1762818348.266148
+    }
+  },
+  {
+    "id": "f5b3d8771ab0",
+    "type": "creative",
+    "flag_file": "/workspaces/Aurora-x/.aurora_knowledge/IMPLEMENT_DATABASE_MIGRATION_SYSTEM.flag",
+    "created_at": "2025-11-10T23:45:53.268204",
+    "status": "completed",
+    "data": {},
+    "attempts": 1,
+    "started_at": "2025-11-10T23:45:53.268722",
+    "completed_at": "2025-11-10T23:45:53.278795",
+    "result": {
+      "status": "success",
+      "timestamp": 1762818353.2787905
+    }
+  },
+  {
+    "id": "93d617a88488",
+    "type": "creative",
+    "flag_file": "/workspaces/Aurora-x/.aurora_knowledge/FINALIZE_CICD_AUTOMATION.flag",
+    "created_at": "2025-11-10T23:45:58.281488",
+    "status": "completed",
+    "data": {},
+    "attempts": 1,
+    "started_at": "2025-11-10T23:45:58.281971",
+    "completed_at": "2025-11-10T23:45:58.288893",
+    "result": {
+      "status": "success",
+      "timestamp": 1762818358.2888894
+    }
+  },
+  {
+    "id": "927b58cea8d9",
+    "type": "creative",
+    "flag_file": "/workspaces/Aurora-x/.aurora_knowledge/CREATE_DOCKERFILE.flag",
+    "created_at": "2025-11-10T23:46:03.292572",
+    "status": "completed",
+    "data": {
+      "Next thing": "Priority #1 from comprehensive analysis: Containerization",
+      "- Consistent environments (dev": "staging = prod)"
+    },
+    "attempts": 1,
+    "started_at": "2025-11-10T23:46:03.293223",
+    "completed_at": "2025-11-10T23:46:03.299549",
+    "result": {
+      "status": "success",
+      "timestamp": 1762818363.2995455
+    }
+  },
+  {
+    "id": "28246b891ed2",
+    "type": "creative",
+    "flag_file": "/workspaces/Aurora-x/.aurora_knowledge/IMPLEMENT_COMPREHENSIVE_TEST_SUITE.flag",
+    "created_at": "2025-11-11T02:57:26.499043",
+    "status": "completed",
+    "data": {
+      "Next Priority": "#2 from comprehensive analysis: Comprehensive Testing"
+    },
+    "attempts": 1,
+    "started_at": "2025-11-11T02:57:26.500004",
+    "completed_at": "2025-11-11T02:57:26.519282",
+    "result": {
+      "status": "success",
+      "timestamp": 1762829846.5192766
+    }
+  },
+  {
+    "id": "9f8cd88576e3",
+    "type": "creative",
+    "flag_file": "/workspaces/Aurora-x/.aurora_knowledge/FIX_PORT_CONNECTION_ISSUES.flag",
+    "created_at": "2025-11-11T02:57:31.548595",
+    "status": "completed",
+    "data": {},
+    "attempts": 1,
+    "started_at": "2025-11-11T02:57:31.549026",
+    "completed_at": "2025-11-11T02:57:31.555339",
+    "result": {
+      "status": "success",
+      "timestamp": 1762829851.555334
+    }
+  },
+  {
+    "id": "b8cf32c94203",
+    "type": "creative",
+    "flag_file": "/workspaces/Aurora-x/.aurora_knowledge/CLEANUP_TECHNICAL_DEBT.flag",
+    "created_at": "2025-11-11T02:57:36.561976",
+    "status": "completed",
+    "data": {},
+    "attempts": 1,
+    "started_at": "2025-11-11T02:57:36.562449",
+    "completed_at": "2025-11-11T02:57:36.569631",
+    "result": {
+      "status": "success",
+      "timestamp": 1762829856.5696273
+    }
+  },
+  {
+    "id": "60f4ab5bddc4",
+    "type": "creative",
+    "flag_file": "/workspaces/Aurora-x/.aurora_knowledge/IMPLEMENT_MONITORING_ALERTING.flag",
+    "created_at": "2025-11-11T02:57:41.571638",
+    "status": "completed",
+    "data": {},
+    "attempts": 1,
+    "started_at": "2025-11-11T02:57:41.572506",
+    "completed_at": "2025-11-11T02:57:41.587168",
+    "result": {
+      "status": "success",
+      "timestamp": 1762829861.5871644
+    }
   }
 ]
